# leapDriver

./: .gitmodules  CMakeLists.txt  Driver.cpp  Driver.h  DriverTouch.h  InputInterface.cpp  InputInterface.h  README.md  driver.cpp  leap_driver_config.json  main.cpp
include/: Driver.h  DriverTouch.h  InputInterface.h  log.h
src/: Driver.cpp  DriverTouch.cpp  InputInterface.cpp  main.cpp
system/: leap_driver.service  leapd.service
